# sgdb

./: Cargo.toml  README.md
src/: main.rs
src/api/: Cargo.toml
src/api/src/: v1.rs
src/api/tests/: api_tests.rs
src/api/v1/: collections.rs  documents.rs  mod.rs  users.rs
src/config/: config.rs
src/engine/: collection.rs  database.rs  document.rs  engine.rs  mod.rs
src/engine/src/: column.rs  config.rs  database.rs  index.rs  lib.rs  query.rs  record.rs  relation.rs  schema.rs  table.rs  transaction.rs
src/models/: Cargo.toml
src/models/src/: lib.rs  models.rs  update_models.rs
src/utils/: generating.rs  mod.rs
