[workspace]
members = [
    "src/api",
    "src/engine",
    "src/models",
    "src/utils"
]

[package]
name = "sgdb"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
chrono = "0.4"
api = { path = "./src/api" }
engine = { path = "./src/engine" }
models = { path = "./src/models" }


[dev-dependencies]
actix-rt = "2.6"  # Pour exécuter des tests async
